@@ -66,7 +66,7 @@
 #define STDC_HEADERS 1
 
 /* Version number of package */
-#define VERSION "1.3-RC2"
+#define VERSION "1.4"
 
 /* Define to empty if `const' does not conform to ANSI C. */
 /* #undef const */
